# satnogs-client

./: .gitattributes  .gitignore  .gitlab-ci.yml  .jshintignore  .pylintrc  .readthedocs.yml  .travis.yml  .yapfignore  Changelog.md  MANIFEST.in  README.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
contrib/: Dockerfile  refresh-requirements.sh  robot_lint.sh
doc/: Makefile  architecture.rst  bbb-install.rst  conf.py  finding-ppm.rst  hardware-install.rst  installation.rst  raspi-install.rst  requirements.txt  satnogsclient.rst
docs/: Makefile  architecture.rst  conf.py  devguide.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  userguide.rst
robot/libraries/: Orbital.py
robot/testsuites/: SatNOGS_client.robot
satnogsclient/: __init__.py  __main__.py  _version.py  artifacts.py  config.py  flowgraph.py  main.py  radio.py  receiver.py  rig.py  rotator.py  settings.py  waterfall.py
satnogsclient/locator/: locator.py
satnogsclient/observer/: commsocket.py  observer.py  orbital.py  udpsocket.py  waterfall.py  worker.py
satnogsclient/radio/: flowgraphs.py
satnogsclient/scheduler/: __init__.py  tasks.py
satnogsclient/tests/: test_artifacts.py
satnogsclient/upsat/: ecss_logic_utils.py  gnuradio_handler.py  hldlc.py  large_data_service.py  packet.py  packet_settings.py  serial_handler.py  tx_handler.py  upsat_status_settings.py  wod.py
satnogsclient/web/: app.py  weblogger.py
satnogsclient/web/static/css/: app.css
satnogsclient/web/static/js/: satnogs-configuration.js  satnogs-control.js  satnogs-status.js  satnogs.js  upsat-control.js
satnogsclient/web/templates/: base.j2  configuration.j2  control.j2  index.j2  satnogs_control.j2  status.j2  upsat_control.j2
