[metadata]
name = satnogsclient
url = https://gitlab.com/librespacefoundation/satnogs/satnogs-client
author = SatNOGS project
author_email = dev@satnogs.org
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Topic :: Communications :: Ham Radio
description = SatNOGS Client

[options]
zip_safe = False
install_requires =
    APScheduler
    SQLAlchemy
    requests
    validators
    python-dateutil
    ephem
    pytz
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    satnogs-client = satnogsclient:main

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = satnogsclient/_version.py
versionfile_build = satnogsclient/_version.py
tag_prefix =
parentdir_prefix =
