[metadata]
name = satnogs-client
url = https://gitlab.com/librespacefoundation/satnogs/satnogs-client
author = SatNOGS project
author_email = dev@satnogs.org
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Topic :: Communications :: Ham Radio
description = SatNOGS Client

[options]
install_requires =
    APScheduler~=3.5.0
    python-dotenv~=0.9.0
    requests~=2.21.0
    validators~=0.14.0
    python-dateutil~=2.7.0
    ephem~=3.7.6.0
    pytz
    numpy~=1.16.0
    matplotlib~=3.0.0
    gps~=3.19
    sentry-sdk~=0.14.0
packages = find:

[options.entry_points]
console_scripts =
    satnogs-client = satnogsclient:main

[flake8]
max-line-length = 99
exclude = satnogsclient/_version.py,versioneer.py,docs,build,.tox

[yapf]
column_limit = 99

[tool:isort]
use_parentheses = True
skip_glob = docs,build,.tox
skip = _version.py,versioneer.py
line_width = 99
multi_line_output = 2

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = satnogsclient/_version.py
versionfile_build = satnogsclient/_version.py
tag_prefix =
parentdir_prefix =
